PROG1/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:37:27 **** Incremental Build of configuration Debug for project PROG1 ****
make -j12 all 
arm-none-eabi-gcc "../components1/led.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F030x6 -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"components1/led.d" -MT"components1/led.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "components1/led.o"
../components1/led.c:13:1: error: expected identifier or '(' before '{' token
   13 | {
      | ^
make: *** [components1/subdir.mk:19: components1/led.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
